--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>KaptainKook</title>
+    <title>CaptainKook</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -46,7 +46,7 @@
               </div>
             </div>
           </div>
-         
+
          <div class="col-sm-3 links">
             <div class="sectionWrapper">
               <div class="sectionHead">CONTACT</div>
@@ -56,7 +56,7 @@
               <div>Join Us</div>
             </div>
         </div>
-         
+
          <div class="col-sm-3 links">
             <div class="sectionWrapper">
               <div class="sectionHead">LEGAL</div>
@@ -89,9 +89,10 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/json3/lib/json3.js"></script>
+    <script src="bower_components/es5-shim/es5-shim.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
